feat: Implement safe logging, add JSDoc comments, rename project references, and introduce a new result organizer utility.

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,8 @@
 {
   "searchApps": true,
   "searchTabs": true,
-  "searchFiles": false
+  "searchFiles": true,
+  "searchCommands": true,
+  "onboardingComplete": false,
+  "selectedApps": []
 }
