--- a/electron/settings.json
+++ b/electron/settings.json
@@ -3,5 +3,49 @@
   "searchTabs": true,
   "searchFiles": true,
   "onboardingComplete": true,
-  "selectedApps": []
+  "selectedApps": [],
+  "theme": "light",
+  "windowPosition": "center",
+  "resultDensity": "comfortable",
+  "fileExclusions": [
+    "**/node_modules",
+    "**/dist",
+    "**/build",
+    "**/.git",
+    "**/.vscode",
+    "**/coverage",
+    "**/Library/Caches"
+  ],
+  "webBangs": {
+    "g": {
+      "name": "Google",
+      "url": "https://google.com/search?q=",
+      "icon": "🔍"
+    },
+    "w": {
+      "name": "Wikipedia",
+      "url": "https://en.wikipedia.org/wiki/Special:Search/",
+      "icon": "📚"
+    },
+    "yt": {
+      "name": "YouTube",
+      "url": "https://youtube.com/results?search_query=",
+      "icon": "▶️"
+    },
+    "gh": {
+      "name": "GitHub",
+      "url": "https://github.com/search?q=",
+      "icon": "🐙"
+    },
+    "so": {
+      "name": "Stack Overflow",
+      "url": "https://stackoverflow.com/search?q=",
+      "icon": "📋"
+    },
+    "r": {
+      "name": "Reddit",
+      "url": "https://reddit.com/search?q=",
+      "icon": "🤖"
+    }
+  }
 }
