--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "electron": "^39.2.7",
     "electron-builder": "^26.4.0",
     "postcss": "^8.5.6",
+    "proxyquire": "^2.1.3",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "vite": "^7.3.1"
