--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@sentry/electron": "^5.10.0",
     "fuse.js": "^7.1.0",
+    "keytar": "^7.9.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
